--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">SocialGift</string>
-    <string name="your_email">Your email</string>
+    <string name="email">E-mail</string>
     <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="dont_have_an_account_register">Don\'t have an account? Register now</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
+    <string name="repeat_password">Repeat password</string>
+    <string name="username">Username</string>
 </resources>
