--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
     <string name="app_name">SocialGift</string>
     <string name="create_new_wishlist">Create new wishlist</string>
+    <string name="deleted_wishlist">Deleted %1$s</string>
     <string name="dont_have_an_account_register">Don\'t have an account? Register now</string>
     <string name="edit_account">Edit account</string>
     <string name="email">E-mail</string>
@@ -22,6 +23,7 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="there_are_no_wishlists_yet">There are no wishlists yet.</string>
+    <string name="undo">Undo</string>
     <string name="username">Username</string>
     <string name="username_empty_error">Username cannot be empty</string>
     <string name="username_invalid_error">Username can only contain letters, numbers, and underscores</string>
